# aether

./: .dev.vars.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  next.config.ts  open-next.config.ts  package-lock.json  package.json  playwright.artifacts.config.ts  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  wrangler.jsonc
.github/: pull_request_template.md
app/: globals.css  layout.tsx  page.tsx
convex/: agentSession.ts  assets.ts  brandPolicy.ts  campaigns.ts  canvas.ts  clusters.ts  creatorContext.ts  inboundReply.ts  lapEvent.ts  proposals.ts  providerPrefs.ts  publisher.ts  runs.ts  schema.ts  signals.ts  skills.ts  textOverlay.ts
docs/: AGENT-BRIEFING.md  AIRBRUSH-VOICE-CALIBRATION-2026-04-25.md  ARCHITECTURE.md  CLIP-MODAL.md  DEMO-FINGER-VOICE.md  DEMO-HANDOFF.md  DEMO.md  DEPLOY-PUBLISHERS.md  DISCORD-SETUP.md  HACKATHON-OVERNIGHT-HANDOFF-2026-04-22.md  HACKATHON-OVERNIGHT-HANDOFF-2026-04-23.md  HANDOFF-BLIND-SIGNATURE-VOICE-2026-04-25.md  HANDOFF-CAPABILITY-FACTORY-2026-04-24.md  HANDOFF-FINGER-VOICE-DEMO-2026-04-24.md  HANDOFF-FINGER-VOICE-DEMO-NEXT-2026-04-24.md  HANDOFF-PHASE-41-SPATIAL-WIRE-2026-04-24.md  HANDOFF-VOICE-REALTIME-2026-04-24.md  MORNING-REVIEW-2026-04-22.md  PRD.md  SAM3-MODAL.md  SIGNALS-SECRETS.md  SOCIAL-AUTO-UPLOAD-SIDECAR.md  SUBMISSION-BUILD-FOR-WHATS-NEXT.md  TESTING.md  agent-routing.md  codex-subscription-adapter.md  qa-rubric.md  reviewer-personas.md
infra/social-auto-upload/: README.md  modal_app.py  pyproject.toml
modal/: clip_cluster_app.py  sam3_app.py
scripts/: fire-debut-direct.ts  (+23 more)
(+754 files in other folders)
